{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 310,
  "lineage": "f3e1b281-588d-3ab5-f8b4-d8af30d7b944",
  "resources": [
    {
      "module": "module.records",
      "mode": "data",
      "type": "google_compute_network",
      "name": "default",
      "provider": "module.records.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "Default network for the project",
            "id": "projects/triple-course-339420/global/networks/default",
            "name": "default",
            "self_link": "https://www.googleapis.com/compute/v1/projects/triple-course-339420/global/networks/default",
            "subnetworks_self_links": [
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/southamerica-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/australia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/northamerica-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/europe-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/europe-north1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/asia-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/us-east7/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/us-east4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/asia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/southamerica-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/us-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/asia-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/europe-west6/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/europe-central2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/europe-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/us-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/australia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/asia-northeast3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/us-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/europe-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/asia-east2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/us-central1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/northamerica-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/asia-south2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/us-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/asia-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/asia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/asia-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/us-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/europe-west3/subnetworks/default"
            ]
          }
        }
      ]
    },
    {
      "module": "module.records",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "mail_ip",
      "provider": "module.records.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.238.8.168",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-01-28T11:36:29.819-08:00",
            "id": "projects/triple-course-339420/regions/us-central1/addresses/mail-server-ip",
            "name": "mail-server-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "triple-course-339420",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/us-central1/addresses/mail-server-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/zones/us-central1-a/instances/compliance-mail"
            ]
          }
        }
      ]
    },
    {
      "module": "module.records",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "web_ip",
      "provider": "module.records.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "104.155.189.209",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-01-28T11:36:30.997-08:00",
            "id": "projects/triple-course-339420/regions/us-central1/addresses/web-server-ip",
            "name": "web-server-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "triple-course-339420",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/us-central1/addresses/web-server-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/triple-course-339420/zones/us-central1-a/instances/web-forwarding"
            ]
          }
        }
      ]
    },
    {
      "module": "module.records",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "compliance_mail_rules",
      "provider": "module.records.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "25",
                  "2525",
                  "465",
                  "587"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-01-28T11:36:30.957-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/triple-course-339420/global/firewalls/compliance-mail-fw-rules",
            "log_config": [],
            "name": "compliance-mail-fw-rules",
            "network": "https://www.googleapis.com/compute/v1/projects/triple-course-339420/global/networks/default",
            "priority": 1000,
            "project": "triple-course-339420",
            "self_link": "https://www.googleapis.com/compute/v1/projects/triple-course-339420/global/firewalls/compliance-mail-fw-rules",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "compliance"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.records.data.google_compute_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.records",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "haproxy-web-rules",
      "provider": "module.records.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-01-28T11:36:30.681-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/triple-course-339420/global/firewalls/haproxy-web-fw-rules",
            "log_config": [],
            "name": "haproxy-web-fw-rules",
            "network": "https://www.googleapis.com/compute/v1/projects/triple-course-339420/global/networks/default",
            "priority": 1000,
            "project": "triple-course-339420",
            "self_link": "https://www.googleapis.com/compute/v1/projects/triple-course-339420/global/firewalls/haproxy-web-fw-rules",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "web"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.records.data.google_compute_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.records",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh_rule",
      "provider": "module.records.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-01-28T11:36:30.964-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/triple-course-339420/global/firewalls/ssh-fw-rules",
            "log_config": [],
            "name": "ssh-fw-rules",
            "network": "https://www.googleapis.com/compute/v1/projects/triple-course-339420/global/networks/default",
            "priority": 1000,
            "project": "triple-course-339420",
            "self_link": "https://www.googleapis.com/compute/v1/projects/triple-course-339420/global/firewalls/ssh-fw-rules",
            "source_ranges": [
              "73.220.151.56/32"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "ssh"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.records.data.google_compute_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.records",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "compliance_mail",
      "provider": "module.records.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20220118",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/triple-course-339420/zones/us-central1-a/disks/compliance-mail"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Instance for Company/Silo Administrative Mail",
            "enable_display": false,
            "hostname": "compliance-mail.localhost",
            "id": "projects/triple-course-339420/zones/us-central1-a/instances/compliance-mail",
            "instance_id": "8723461666699344677",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "5D5a9jqQPHM=",
            "metadata_startup_script": "sudo apt-get update\nsudo apt-get install -y postfix\n\nsudo echo '# See /usr/share/postfix/main.cf.dist for a commented, more complete version\n\n# Debian specific:  Specifying a file name will cause the first\n# line of that file to be used as the name.  The Debian default\n# is /etc/mailname.\n#myorigin = /etc/mailname\n\nsmtpd_sender_restrictions = reject_unknown_sender_domain\n\nsmtpd_banner = $myhostname ESMTP\nbiff = no\n\n# appending .domain is the [...]
            "name": "compliance-mail",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.238.8.168",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/triple-course-339420/global/networks/default",
                "network_ip": "10.128.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/us-central1/subnetworks/default",
                "subnetwork_project": "triple-course-339420"
              }
            ],
            "project": "triple-course-339420",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/triple-course-339420/zones/us-central1-a/instances/compliance-mail",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "compliance",
              "ssh"
            ],
            "tags_fingerprint": "PpC2UBaqPU0=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.records.google_compute_address.mail_ip"
          ]
        }
      ]
    },
    {
      "module": "module.records",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web-forwarding",
      "provider": "module.records.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20220118",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/triple-course-339420/zones/us-central1-a/disks/web-forwarding"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Instance for Domain Silo web infrastructure",
            "enable_display": false,
            "hostname": "web-forwarding.localhost",
            "id": "projects/triple-course-339420/zones/us-central1-a/instances/web-forwarding",
            "instance_id": "4752296344601361188",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "bZqlEohiDks=",
            "metadata_startup_script": "sudo apt-get update\nsudo apt-get install -y haproxy\n\nsudo echo '# HTTP/S to Domain Silo Infra\n\n#HTTP\nfrontend tcp-80\nbind 0.0.0.0:80\ndefault_backend kubernetes-80\n\nbackend kubernetes-80\nserver k1 35.232.123.170:80\n\n#HTTPS\nfrontend tcp-443\nbind 0.0.0.0:443\ndefault_backend kubernetes-443\n\nbackend kubernetes-443\nserver k1s 35.232.123.170:443' \u003e /etc/haproxy/haproxy.cfg",
            "name": "web-forwarding",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.155.189.209",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/triple-course-339420/global/networks/default",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/triple-course-339420/regions/us-central1/subnetworks/default",
                "subnetwork_project": "triple-course-339420"
              }
            ],
            "project": "triple-course-339420",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/triple-course-339420/zones/us-central1-a/instances/web-forwarding",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "ssh"
            ],
            "tags_fingerprint": "xEi19su0rvw=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.records.google_compute_address.web_ip"
          ]
        }
      ]
    }
  ]
}